update allianz demo

--- a/demo/2017_05_peko_allianz/index.html
+++ b/demo/2017_05_peko_allianz/index.html
@@ -1,62 +1,85 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>安聯人壽</title>
+    <title>安聯人壽-現實人生無法重來，及早備好健康險才能無憾！</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta http-equiv="content-language" content="zh-tw">
+    <meta name="description" content="你也渴望人生無憾嗎？依據每個人不同的財務狀況與不同階段的人生需求，循序漸進累積健康險，人生保障才能越來越完整！">
+    <meta name="keywords" content="安聯人壽,過去的自己,人生,無憾,健康險,基本保障,進階防護,家人後盾,完整照護,寶健康終身健康保險,小資族,終身醫療一年定期住院醫療費用保險附約,實支實付,實日額給付骨力強傷害保險附約,意外骨折,脫臼一年定期手術醫療健康保險附約,1455項手術給付,意外傷害保險附約,全方位定期壽險附約,三明治,階段性需求,重大疾病及二至六級殘廢豁免保險費附約,幫保單買保險,享安心殘廢照護健康保險附約,後天疾病,一年定期重大疾病暨特定傷病健康保險附約,高達72.18％,安心寶重大疾病暨特定傷病健康保險附約,主要經濟來源者">
+    <meta property="og:title" content="安聯人壽-現實人生無法重來，及早備好健康險才能無憾！">
+    <meta property="og:description" content="你也渴望人生無憾嗎？依據每個人不同的財務狀況與不同階段的人生需求，循序漸進累積健康險，人生保障才能越來越完整！">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
-    <link rel="stylesheet" href="css/app.css?2017_5_7_10_43">
+    <link rel="stylesheet" href="css/app.css?2017_5_10_10_27">
     <script>
       // 如果表單傳送成功, 將下方的 __success 改成 true
       window.__success = false;
     </script>
   </head>
   <body>
+    <div class="pop_info">
+      <div class="inner">
+        <h1>個人資料蒐集、處理、利用告知事項</h1><br>
+        <p>安聯人壽保險股份有限公司(下稱本公司)依據個人資料保護法 (下稱個資法) 第八條第一項規定，向您告知下列事項，請您詳閱：</p><br>
+        <p>一、蒐集之目的：</p>
+        <p>本公司保險商品或服務之介紹、保險商品行銷服務。</p><br>
+        <p>二、蒐集之個人資料類別：姓名、出生年月日、聯絡電話、性別。</p><br>
+        <p>三、利用之期間、地區、對象及方式：</p>
+        <p class="indent">(一) 期間：因執行業務所必須及依法令規定要求應為保存之期間。</p>
+        <p class="indent">(二) 對象：本公司。</p>
+        <p class="indent">(三) 地區：中華民國境內。</p>
+        <p class="indent">(四) 方式：合於法令規定之利用方式。</p><br>
+        <p>四、當事人權利行使：您可依個人資料保護法第三條之規定行使相關權利，如查詢或請求閱覽、請求製給複製本(依法本公司得向您酌收必要成本費用)、請求補充或更正、請求停止蒐集、處理或利用、請求刪除個人資料，惟依法本公司因執行業務所必須者，得不依本人請求或請求方式為之。</p><br>
+        <p>五、您拒不提供個人資料所致權益之影響：</p>
+        <p>您得自由選擇是否提供相關個人資料，惟若拒絕提供相關個人資料，本公司將無法提供相關之服務。</p>
+        <div class="close_btn"></div>
+      </div>
+    </div>
     <div class="pop">
       <div class="form_wrap">
         <div class="form_success"></div>
         <form action="" method="post">
-          <div class="row align-center">
-            <div class="title"></div>
-          </div>
-          <div class="row">
-            <label class="form_label">姓名：</label>
-            <input type="text" name="name">
-          </div>
-          <div class="row">
-            <label class="form_label">性別：</label>
-            <label>
-              <input type="radio" value="男" name="gender">男
-            </label>
-            <label>
-              <input type="radio" value="女" name="gender">女
-            </label>
-          </div>
-          <div class="row">
-            <label class="form_label">手機：</label>
-            <input type="tel" name="tel" maxlength="10">
-          </div>
-          <div class="row">
-            <label>
-              <input type="checkbox">我已閱讀個資注意事項並同意送出資料
-            </label>
-          </div>
-          <div class="row align-center">
-            <input type="submit" value="">
+          <div class="align-center title_wrap"><a class="title" href="tel:0809090609"></a></div>
+          <div class="inner">
+            <div class="row">
+              <label class="form_label">姓名：</label>
+              <input type="text" name="name">
+            </div>
+            <div class="row">
+              <label class="form_label">性別：</label>
+              <label>
+                <input type="radio" value="男" name="gender">男
+              </label>
+              <label>
+                <input type="radio" value="女" name="gender">女
+              </label>
+            </div>
+            <div class="row">
+              <label class="form_label">手機：</label>
+              <input type="tel" name="tel" maxlength="10">
+            </div>
+            <div class="row info">
+              <label class="form_label">
+                <input type="checkbox">
+              </label>
+              <p>我已閱讀本<a href="#">個資告知事項</a>並同意貴公司得蒐集、處理或利用本人所送出之個人資料</p>
+            </div>
+            <div class="row align-center">
+              <input type="submit" value="請專人與我聯絡">
+            </div>
           </div>
         </form>
         <div class="close_btn"></div>
       </div>
     </div>
-    <div id="app"><!-- 2017_5_7_10_43 -->
+    <div id="app"><!-- 2017_5_10_10_27 -->
       <header>
-        <div class="container">                   
+        <div class="container">
           <div class="clock_wrap">
             <div class="clock">
               <div class="bar"></div>
             </div>
           </div><a class="logo" href="#"></a>
-          <div class="kv_txt"></div><a class="cf" href="#"></a>
+          <div class="kv_txt"></div><a class="cf" href="https://www.youtube.com/watch?v=4axeWdOx9lQ&amp;feature=youtu.be" target="_blank"></a>
         </div>
       </header>
       <main class="container">
@@ -67,46 +90,46 @@
         <div class="s0_top"></div>
         <div class="item_container">
           <div class="left item s0_0">
-            <div class="btn_wrap"><a class="more_btn" href="#">了解更多</a><a class="contact_btn" href="#">與我聯絡</a></div>
+            <div class="btn_wrap"><a class="more_btn" href="https://www.allianz.com.tw/zh-tw/products/protection/health/WHO2/" target="_blank">了解更多</a><a class="contact_btn" href="#">與我聯絡</a></div>
           </div>
           <div class="right item s0_1">
-            <div class="btn_wrap"><a class="more_btn" href="#">了解更多</a><a class="contact_btn" href="#">與我聯絡</a></div>
+            <div class="btn_wrap"><a class="more_btn" href="https://www.allianz.com.tw/zh-tw/products/protection/health/HMR/" target="_blank">了解更多</a><a class="contact_btn" href="#">與我聯絡</a></div>
           </div>
         </div>
         <div class="s1_top hash"></div>
         <div class="item_container">
           <div class="left item s1_0">
-            <div class="btn_wrap"><a class="more_btn" href="#">了解更多</a><a class="contact_btn" href="#">與我聯絡</a></div>
+            <div class="btn_wrap"><a class="more_btn" href="https://www.allianz.com.tw/zh-tw/products/protection/accident-and-travel/FIR/" target="_blank">了解更多</a><a class="contact_btn" href="#">與我聯絡</a></div>
           </div>
           <div class="right item s1_1">
-            <div class="btn_wrap"><a class="more_btn" href="#">了解更多</a><a class="contact_btn" href="#">與我聯絡</a></div>
+            <div class="btn_wrap"><a class="more_btn" href="https://www.allianz.com.tw/zh-tw/products/protection/health/YSR/" target="_blank">了解更多</a><a class="contact_btn" href="#">與我聯絡</a></div>
           </div>
         </div>
         <div class="item_container">
           <div class="item s2_0">
-            <div class="btn_wrap"><a class="more_btn" href="#">了解更多</a><a class="contact_btn" href="#">與我聯絡</a></div>
+            <div class="btn_wrap"><a class="more_btn" href="https://www.allianz.com.tw/zh-tw/products/protection/accident-and-travel/AIR/" target="_blank">了解更多</a><a class="contact_btn" href="#">與我聯絡</a></div>
           </div>
         </div>
         <div class="item_container hash">
           <div class="item s3_0">
-            <div class="btn_wrap"><a class="more_btn" href="#">了解更多</a><a class="contact_btn green" href="#">與我聯絡</a></div>
+            <div class="btn_wrap"><a class="more_btn" href="https://www.allianz.com.tw/zh-tw/products/protection/life/TLR/" target="_blank">了解更多</a><a class="contact_btn green" href="#">與我聯絡</a></div>
           </div>
         </div>
         <div class="s4_top hash"></div>
         <div class="item_container">
           <div class="left item s4_0">
-            <div class="btn_wrap"><a class="more_btn" href="#">了解更多</a><a class="contact_btn green" href="#">與我聯絡</a></div>
+            <div class="btn_wrap"><a class="more_btn" href="https://www.allianz.com.tw/zh-tw/products/protection/health/WPR/" target="_blank">了解更多</a><a class="contact_btn green" href="#">與我聯絡</a></div>
           </div>
           <div class="right item s4_1">
-            <div class="btn_wrap"><a class="more_btn" href="#">了解更多</a><a class="contact_btn green" href="#">與我聯絡</a></div>
+            <div class="btn_wrap"><a class="more_btn" href="https://www.allianz.com.tw/zh-tw/products/protection/health/NDR/" target="_blank">了解更多</a><a class="contact_btn green" href="#">與我聯絡</a></div>
           </div>
         </div>
         <div class="item_container">
           <div class="left item s5_0">
-            <div class="btn_wrap"><a class="more_btn" href="#">了解更多</a><a class="contact_btn green" href="#">與我聯絡</a></div>
+            <div class="btn_wrap"><a class="more_btn" href="https://www.allianz.com.tw/zh-tw/products/protection/health/DDR" target="_blank">了解更多</a><a class="contact_btn green" href="#">與我聯絡</a></div>
           </div>
           <div class="right item s5_1">
-            <div class="btn_wrap"><a class="more_btn" href="#">了解更多</a><a class="contact_btn green" href="#">與我聯絡</a></div>
+            <div class="btn_wrap"><a class="more_btn" href="https://www.allianz.com.tw/zh-tw/products/protection/health/DDAR/" target="_blank">了解更多</a><a class="contact_btn green" href="#">與我聯絡</a></div>
           </div>
         </div>
       </main>
@@ -137,8 +160,7 @@
         <p>© Allianz 2017. All Rights Reserved</p>
       </footer>
     </div>
-    <script id="btn_template" type="x-template"><a class="more_btn" href="#">了解更多</a><a class="contact_btn green" href="#">與我聯絡</a></script>
     <script src="js/vender.233848c362.js" defer></script>
-    <script src="js/app.js?2017_5_7_10_43" defer></script>
+    <script src="js/app.js?2017_5_10_10_27" defer></script>
   </body>
 </html>
