--- a/demo/2017_05_peko_allianz/index.html
+++ b/demo/2017_05_peko_allianz/index.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="安聯人壽-現實人生無法重來，及早備好健康險才能無憾！">
     <meta property="og:description" content="你也渴望人生無憾嗎？依據每個人不同的財務狀況與不同階段的人生需求，循序漸進累積健康險，人生保障才能越來越完整！">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
-    <link rel="stylesheet" href="css/app.css?2017_5_10_10_27">
+    <link rel="stylesheet" href="css/app.css?2017_5_10_10_51">
     <script>
       // 如果表單傳送成功, 將下方的 __success 改成 true
       window.__success = false;
@@ -42,7 +42,7 @@
           <div class="inner">
             <div class="row">
               <label class="form_label">姓名：</label>
-              <input type="text" name="name">
+              <input class="form_name" type="text" name="name">
             </div>
             <div class="row">
               <label class="form_label">性別：</label>
@@ -55,11 +55,11 @@
             </div>
             <div class="row">
               <label class="form_label">手機：</label>
-              <input type="tel" name="tel" maxlength="10">
+              <input class="form_tel" type="tel" name="tel" maxlength="10">
             </div>
             <div class="row info">
               <label class="form_label">
-                <input type="checkbox">
+                <input class="form_info" type="checkbox">
               </label>
               <p>我已閱讀本<a href="#">個資告知事項</a>並同意貴公司得蒐集、處理或利用本人所送出之個人資料</p>
             </div>
@@ -71,7 +71,7 @@
         <div class="close_btn"></div>
       </div>
     </div>
-    <div id="app"><!-- 2017_5_10_10_27 -->
+    <div id="app"><!-- 2017_5_10_10_51 -->
       <header>
         <div class="container">
           <div class="clock_wrap">
@@ -161,6 +161,6 @@
       </footer>
     </div>
     <script src="js/vender.233848c362.js" defer></script>
-    <script src="js/app.js?2017_5_10_10_27" defer></script>
+    <script src="js/app.js?2017_5_10_10_51" defer></script>
   </body>
 </html>
