--- a/demo/2017_05_peko_allianz/index.html
+++ b/demo/2017_05_peko_allianz/index.html
@@ -9,13 +9,21 @@
     <meta property="og:title" content="安聯人壽-現實人生無法重來，及早備好健康險才能無憾！">
     <meta property="og:description" content="你也渴望人生無憾嗎？依據每個人不同的財務狀況與不同階段的人生需求，循序漸進累積健康險，人生保障才能越來越完整！">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
-    <link rel="stylesheet" href="css/app.css?2017_5_10_10_51">
+    <link rel="stylesheet" href="css/app.css?2017_5_10_17_39">
     <script>
       // 如果表單傳送成功, 將下方的 __success 改成 true
       window.__success = false;
     </script>
   </head>
   <body>
+    <div class="pop_youtube">
+      <div class="inner">
+        <div class="video-container">
+          <div id="player"></div>
+        </div>
+        <div class="close_btn"></div>
+      </div>
+    </div>
     <div class="pop_info">
       <div class="inner">
         <h1>個人資料蒐集、處理、利用告知事項</h1><br>
@@ -71,7 +79,7 @@
         <div class="close_btn"></div>
       </div>
     </div>
-    <div id="app"><!-- 2017_5_10_10_51 -->
+    <div id="app"><!-- 2017_5_10_17_39 -->
       <header>
         <div class="container">
           <div class="clock_wrap">
@@ -161,6 +169,6 @@
       </footer>
     </div>
     <script src="js/vender.233848c362.js" defer></script>
-    <script src="js/app.js?2017_5_10_10_51" defer></script>
+    <script src="js/app.js?2017_5_10_17_39" defer></script>
   </body>
 </html>
