--- a/demo/sheepfarm/index.html
+++ b/demo/sheepfarm/index.html
@@ -9,17 +9,17 @@
 <link rel="image_src" href="images/fb_200x200.jpg"/> 		
 <link type="text/css" rel="stylesheet" href="css/reset.css" /> 
 <link href='http://fonts.googleapis.com/css?family=Noto+Sans' rel='stylesheet' type='text/css'>
-<!-- <script src="http://code.createjs.com/easeljs-0.6.1.min.js"></script> -->
-<script src="js/lib/easeljs-0.7.1.min.js"></script>
-<script src="js/lib/movieclip-0.7.1.min.js"></script>
-<script src="js/lib/tweenjs-0.5.1.min.js"></script>
-<script src="js/lib/preloadjs-0.4.1.min.js"></script>
-<script src="js/lib/soundjs-0.5.2.min.js"></script>
+<!-- <script src="js/lib/easeljs-0.7.1.min.js"></script> -->
+<!-- <script src="js/lib/movieclip-0.7.1.min.js"></script> -->
+<!-- <script src="js/lib/tweenjs-0.5.1.min.js"></script> -->
+<!-- <script src="js/lib/preloadjs-0.4.1.min.js"></script> -->
+<!-- <script src="js/lib/soundjs-0.5.2.min.js"></script> -->
 
-<!-- <script src="http://code.createjs.com/tweenjs-0.4.1.min.js"></script> -->
-<!-- <script src="http://code.createjs.com/movieclip-0.6.1.min.js"></script> -->
-<!-- <script src="http://code.createjs.com/preloadjs-0.3.1.min.js"></script>
-<script src="http://code.createjs.com/soundjs-0.4.0.min.js"></script> -->
+<script src="http://code.createjs.com/easeljs-0.6.1.min.js"></script>
+<script src="http://code.createjs.com/tweenjs-0.4.1.min.js"></script>
+<script src="http://code.createjs.com/movieclip-0.6.1.min.js"></script>
+<script src="http://code.createjs.com/preloadjs-0.4.1.min.js"></script>
+<script src="http://code.createjs.com/soundjs-0.5.2.min.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 <script src="js/SheepFarm.js"></script>
 <script src="js/game.js"></script>
@@ -217,6 +217,7 @@ function startGame(){
     	<div id="loading_bar"></div>
     </div>
 
+		<!--
     <div id="fb-root"></div>
 	<script>(function(d, s, id) {
 	  var js, fjs = d.getElementsByTagName(s)[0];
@@ -228,6 +229,7 @@ function startGame(){
 
 
 	<div class="fb-like" data-href="http://milkmidi.com/sheepfarm/" data-send="false" data-width="450" data-show-faces="true"></div>
+	-->
 </div> <!-- wrap -->
 </body>
 </html>
